Finally we have a f*** big orange triangle

--- a/OpenGLSnake/OpenGLSnake.vcxproj
+++ b/OpenGLSnake/OpenGLSnake.vcxproj
@@ -125,6 +125,9 @@
     <ClCompile Include="..\..\..\..\OpenGL\SnakeOpenGL\Include\src\glad.c" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="vertex.glsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
