--- a/OpenGLSnake/OpenGLSnake.vcxproj.filters
+++ b/OpenGLSnake/OpenGLSnake.vcxproj.filters
@@ -22,4 +22,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="vertex.glsl">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
