--- a/OpenGLSnake/OpenGLSnake.vcxproj
+++ b/OpenGLSnake/OpenGLSnake.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{4B94058A-07BC-49BF-B607-AA749E9A0FE9}</ProjectGuid>
     <RootNamespace>OpenGLSnake</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>OpenGL2DGame</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
